<resources>
    <string name="app_name">Proyecto_integrador</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="registrate_aqu">Registrate aquí</string>
    <string name="inicia_sesion_aqui">Inicia sesión aquí</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="registrate">Registrate</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>