<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txt_registrate"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"
        android:text="@string/registro"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txt_registrate" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        android:textColor="#6ABDA6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_registrate" />

    <Button
        android:id="@+id/button3"
        android:layout_width="381dp"
        android:layout_height="54dp"
        android:layout_marginTop="130dp"
        android:text="@string/inicia_sesion_aqui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="381dp"
        android:layout_height="54dp"
        android:text="@string/registrate_aqu"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:drawableLeft="@drawable/ic_usuario"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>