<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitis.RegistrarseActivity">


    <TextView
        android:id="@+id/txt_inicio"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textColorHint="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"
        android:text="@string/registro"
        android:textColor="#6ABDA6"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txt_inicio" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_inicio" />

    <Button
        android:id="@+id/btn_inicioSesion"
        android:layout_width="381dp"
        android:layout_height="54dp"
        android:layout_marginTop="180dp"
        android:onClick="inicioSesion"
        android:text="Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:drawableLeft="@drawable/ic_usuario"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/txt_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:text="Ya tienes una cuenta?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:text="Entonces inicia sesión"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cuenta" />

    <TextView
        android:id="@+id/txt_aqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="aquí"
        android:textColor="#6ABDA6"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_cuenta"
        android:clickable="true"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickprueba"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inicioSesion" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondo_splash"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>